MipsParser.automaton
State 0:
prog' -> . prog [ # ]
-- On SET shift to state 1
-- On PRINT shift to state 36
-- On IF shift to state 38
-- On stmts shift to state 49
-- On stmt shift to state 47
-- On prog shift to state 51

State 1:
stmt -> SET . IDENT EQ expr [ SMC EOF ELSE DONE ]
-- On IDENT shift to state 2

State 2:
stmt -> SET IDENT . EQ expr [ SMC EOF ELSE DONE ]
-- On EQ shift to state 3

State 3:
stmt -> SET IDENT EQ . expr [ SMC EOF ELSE DONE ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 35
-- On cst shift to state 14

State 4:
cst -> TRUE . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production cst -> TRUE 
-- On THEN reduce production cst -> TRUE 
-- On SMC reduce production cst -> TRUE 
-- On SMALLER reduce production cst -> TRUE 
-- On RP reduce production cst -> TRUE 
-- On PLUS reduce production cst -> TRUE 
-- On MINUS reduce production cst -> TRUE 
-- On EQUALS reduce production cst -> TRUE 
-- On EQSMALL reduce production cst -> TRUE 
-- On EQBIG reduce production cst -> TRUE 
-- On EOF reduce production cst -> TRUE 
-- On ELSE reduce production cst -> TRUE 
-- On DONE reduce production cst -> TRUE 
-- On DIV reduce production cst -> TRUE 
-- On DIFFERS reduce production cst -> TRUE 
-- On BIGGER reduce production cst -> TRUE 

State 5:
expr -> MINUS . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 34
-- On cst shift to state 14

State 6:
expr -> LP . expr RP [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 11
-- On cst shift to state 14

State 7:
cst -> INT . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production cst -> INT 
-- On THEN reduce production cst -> INT 
-- On SMC reduce production cst -> INT 
-- On SMALLER reduce production cst -> INT 
-- On RP reduce production cst -> INT 
-- On PLUS reduce production cst -> INT 
-- On MINUS reduce production cst -> INT 
-- On EQUALS reduce production cst -> INT 
-- On EQSMALL reduce production cst -> INT 
-- On EQBIG reduce production cst -> INT 
-- On EOF reduce production cst -> INT 
-- On ELSE reduce production cst -> INT 
-- On DONE reduce production cst -> INT 
-- On DIV reduce production cst -> INT 
-- On DIFFERS reduce production cst -> INT 
-- On BIGGER reduce production cst -> INT 

State 8:
expr -> IDENT . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production expr -> IDENT 
-- On THEN reduce production expr -> IDENT 
-- On SMC reduce production expr -> IDENT 
-- On SMALLER reduce production expr -> IDENT 
-- On RP reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On EQUALS reduce production expr -> IDENT 
-- On EQSMALL reduce production expr -> IDENT 
-- On EQBIG reduce production expr -> IDENT 
-- On EOF reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DONE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On DIFFERS reduce production expr -> IDENT 
-- On BIGGER reduce production expr -> IDENT 

State 9:
cst -> FLOAT . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production cst -> FLOAT 
-- On THEN reduce production cst -> FLOAT 
-- On SMC reduce production cst -> FLOAT 
-- On SMALLER reduce production cst -> FLOAT 
-- On RP reduce production cst -> FLOAT 
-- On PLUS reduce production cst -> FLOAT 
-- On MINUS reduce production cst -> FLOAT 
-- On EQUALS reduce production cst -> FLOAT 
-- On EQSMALL reduce production cst -> FLOAT 
-- On EQBIG reduce production cst -> FLOAT 
-- On EOF reduce production cst -> FLOAT 
-- On ELSE reduce production cst -> FLOAT 
-- On DONE reduce production cst -> FLOAT 
-- On DIV reduce production cst -> FLOAT 
-- On DIFFERS reduce production cst -> FLOAT 
-- On BIGGER reduce production cst -> FLOAT 

State 10:
cst -> FALSE . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production cst -> FALSE 
-- On THEN reduce production cst -> FALSE 
-- On SMC reduce production cst -> FALSE 
-- On SMALLER reduce production cst -> FALSE 
-- On RP reduce production cst -> FALSE 
-- On PLUS reduce production cst -> FALSE 
-- On MINUS reduce production cst -> FALSE 
-- On EQUALS reduce production cst -> FALSE 
-- On EQSMALL reduce production cst -> FALSE 
-- On EQBIG reduce production cst -> FALSE 
-- On EOF reduce production cst -> FALSE 
-- On ELSE reduce production cst -> FALSE 
-- On DONE reduce production cst -> FALSE 
-- On DIV reduce production cst -> FALSE 
-- On DIFFERS reduce production cst -> FALSE 
-- On BIGGER reduce production cst -> FALSE 

State 11:
expr -> expr . PLUS expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG DIV DIFFERS BIGGER ]
expr -> LP expr . RP [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES shift to state 12
-- On SMALLER shift to state 15
-- On RP shift to state 23
-- On PLUS shift to state 17
-- On MINUS shift to state 21
-- On EQUALS shift to state 24
-- On EQSMALL shift to state 26
-- On EQBIG shift to state 28
-- On DIV shift to state 19
-- On DIFFERS shift to state 30
-- On BIGGER shift to state 32

State 12:
expr -> expr TIMES . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 13
-- On cst shift to state 14

State 13:
expr -> expr . PLUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr TIMES expr . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production expr -> expr TIMES expr 
-- On THEN reduce production expr -> expr TIMES expr 
-- On SMC reduce production expr -> expr TIMES expr 
-- On SMALLER reduce production expr -> expr TIMES expr 
-- On RP reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On EQUALS reduce production expr -> expr TIMES expr 
-- On EQSMALL reduce production expr -> expr TIMES expr 
-- On EQBIG reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On ELSE reduce production expr -> expr TIMES expr 
-- On DONE reduce production expr -> expr TIMES expr 
-- On DIV reduce production expr -> expr TIMES expr 
-- On DIFFERS reduce production expr -> expr TIMES expr 
-- On BIGGER reduce production expr -> expr TIMES expr 

State 14:
expr -> cst . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production expr -> cst 
-- On THEN reduce production expr -> cst 
-- On SMC reduce production expr -> cst 
-- On SMALLER reduce production expr -> cst 
-- On RP reduce production expr -> cst 
-- On PLUS reduce production expr -> cst 
-- On MINUS reduce production expr -> cst 
-- On EQUALS reduce production expr -> cst 
-- On EQSMALL reduce production expr -> cst 
-- On EQBIG reduce production expr -> cst 
-- On EOF reduce production expr -> cst 
-- On ELSE reduce production expr -> cst 
-- On DONE reduce production expr -> cst 
-- On DIV reduce production expr -> cst 
-- On DIFFERS reduce production expr -> cst 
-- On BIGGER reduce production expr -> cst 

State 15:
expr -> expr SMALLER . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 16
-- On cst shift to state 14

State 16:
expr -> expr . PLUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr SMALLER expr . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES shift to state 12
-- On PLUS shift to state 17
-- On MINUS shift to state 21
-- On DIV shift to state 19
-- On THEN reduce production expr -> expr SMALLER expr 
-- On SMC reduce production expr -> expr SMALLER expr 
-- On SMALLER reduce production expr -> expr SMALLER expr 
-- On RP reduce production expr -> expr SMALLER expr 
-- On EQUALS reduce production expr -> expr SMALLER expr 
-- On EQSMALL reduce production expr -> expr SMALLER expr 
-- On EQBIG reduce production expr -> expr SMALLER expr 
-- On EOF reduce production expr -> expr SMALLER expr 
-- On ELSE reduce production expr -> expr SMALLER expr 
-- On DONE reduce production expr -> expr SMALLER expr 
-- On DIFFERS reduce production expr -> expr SMALLER expr 
-- On BIGGER reduce production expr -> expr SMALLER expr 

State 17:
expr -> expr PLUS . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 18
-- On cst shift to state 14

State 18:
expr -> expr . PLUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr PLUS expr . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES shift to state 12
-- On DIV shift to state 19
-- On THEN reduce production expr -> expr PLUS expr 
-- On SMC reduce production expr -> expr PLUS expr 
-- On SMALLER reduce production expr -> expr PLUS expr 
-- On RP reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On EQUALS reduce production expr -> expr PLUS expr 
-- On EQSMALL reduce production expr -> expr PLUS expr 
-- On EQBIG reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On DONE reduce production expr -> expr PLUS expr 
-- On DIFFERS reduce production expr -> expr PLUS expr 
-- On BIGGER reduce production expr -> expr PLUS expr 

State 19:
expr -> expr DIV . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 20
-- On cst shift to state 14

State 20:
expr -> expr . PLUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr DIV expr . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production expr -> expr DIV expr 
-- On THEN reduce production expr -> expr DIV expr 
-- On SMC reduce production expr -> expr DIV expr 
-- On SMALLER reduce production expr -> expr DIV expr 
-- On RP reduce production expr -> expr DIV expr 
-- On PLUS reduce production expr -> expr DIV expr 
-- On MINUS reduce production expr -> expr DIV expr 
-- On EQUALS reduce production expr -> expr DIV expr 
-- On EQSMALL reduce production expr -> expr DIV expr 
-- On EQBIG reduce production expr -> expr DIV expr 
-- On EOF reduce production expr -> expr DIV expr 
-- On ELSE reduce production expr -> expr DIV expr 
-- On DONE reduce production expr -> expr DIV expr 
-- On DIV reduce production expr -> expr DIV expr 
-- On DIFFERS reduce production expr -> expr DIV expr 
-- On BIGGER reduce production expr -> expr DIV expr 

State 21:
expr -> expr MINUS . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 22
-- On cst shift to state 14

State 22:
expr -> expr . PLUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . MINUS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr MINUS expr . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . TIMES expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIV expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . BIGGER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . SMALLER expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQSMALL expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQBIG expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . EQUALS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
expr -> expr . DIFFERS expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES shift to state 12
-- On DIV shift to state 19
-- On THEN reduce production expr -> expr MINUS expr 
-- On SMC reduce production expr -> expr MINUS expr 
-- On SMALLER reduce production expr -> expr MINUS expr 
-- On RP reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On EQUALS reduce production expr -> expr MINUS expr 
-- On EQSMALL reduce production expr -> expr MINUS expr 
-- On EQBIG reduce production expr -> expr MINUS expr 
-- On EOF reduce production expr -> expr MINUS expr 
-- On ELSE reduce production expr -> expr MINUS expr 
-- On DONE reduce production expr -> expr MINUS expr 
-- On DIFFERS reduce production expr -> expr MINUS expr 
-- On BIGGER reduce production expr -> expr MINUS expr 

State 23:
expr -> LP expr RP . [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TIMES reduce production expr -> LP expr RP 
-- On THEN reduce production expr -> LP expr RP 
-- On SMC reduce production expr -> LP expr RP 
-- On SMALLER reduce production expr -> LP expr RP 
-- On RP reduce production expr -> LP expr RP 
-- On PLUS reduce production expr -> LP expr RP 
-- On MINUS reduce production expr -> LP expr RP 
-- On EQUALS reduce production expr -> LP expr RP 
-- On EQSMALL reduce production expr -> LP expr RP 
-- On EQBIG reduce production expr -> LP expr RP 
-- On EOF reduce production expr -> LP expr RP 
-- On ELSE reduce production expr -> LP expr RP 
-- On DONE reduce production expr -> LP expr RP 
-- On DIV reduce production expr -> LP expr RP 
-- On DIFFERS reduce production expr -> LP expr RP 
-- On BIGGER reduce production expr -> LP expr RP 

State 24:
expr -> expr EQUALS . expr [ TIMES THEN SMC SMALLER RP PLUS MINUS EQUALS EQSMALL EQBIG EOF ELSE DONE DIV DIFFERS BIGGER ]
-- On TRUE shift to state 4
-- On MINUS shift to state 5
-- On LP shift to state 6
-- On INT shift to state 7
-- On IDENT shift to state 8
-- On FLOAT shift to state 9
-- On FALSE shift to state 10
-- On expr shift to state 25
-- On cst shift to state 14
